--- a/css/main.scss
+++ b/css/main.scss
@@ -113,8 +113,8 @@ input[submit] {
 	font: inherit;
 	padding: 2rem;
 	background-image: $primary-color;
-	background-image:linear-gradient(
-      #FF5B37, $primary-color
+	background-image:linear-gradient(45deg,
+      #1AD6FD, $primary-color
     );
 }
 
