--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@ input[submit] {
   font: inherit;
   padding: 2rem;
   background-image: #455A64;
-  background-image: linear-gradient(#FF5B37, #455A64); }
+  background-image: linear-gradient(45deg, #1AD6FD, #455A64); }
 
 #mc_embed_signup p {
   margin: 0.5rem 0 0 0;
